Styling the "About Us" section -- use CSS grip to align items -- style them to fix

--- a/styles.css
+++ b/styles.css
@@ -289,3 +289,87 @@ padding: 7rem 0 10rem 0;
     height: .3rem;
     background-color: #c29525;
 }
+
+/* Services */
+.services{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    grid-row-gap: 4rem;
+}
+
+.service{
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
+.service:nth-child(1){
+    grid-column: 4/7;
+    grid-row: 1/3;
+}
+
+.service:nth-child(2){
+    grid-column: 3/6;
+    grid-row: 3/5;
+}
+
+.service:nth-child(3){
+    grid-column: 4/7;
+    grid-row: 5/-1;
+}
+
+.service:nth-child(4){
+    grid-column: 11/14;
+    grid-row: 1/3;
+}
+
+.service:nth-child(5){
+    grid-column: 12/15;
+    grid-row: 3/5;
+}
+
+.service:nth-child(6){
+    grid-column: 11/14;
+    grid-row: 5/-1;
+}
+
+.service-header{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.service-header i{
+    font-size: 4rem;
+    margin-right: 2rem;
+    color: #4b4b4b;
+}
+
+.service-header h3{
+font-family: 'Baloo Da 2', serif;
+font-size: 2.6rem;
+font-weight: 400;
+line-height: 2.6rem;
+margin-bottom: 2rem;
+
+}
+
+.service-text{
+    font-family: 'Josefin Slab', serif;
+    font-size: 1.6rem;
+    text-align: justify;
+}
+
+.about-us-img-wrapper{
+   grid-column: 7/11;
+   grid-row: 2/6;
+   width: 100%;
+    
+}
+.about-us-img-wrapper img{
+    width: 100%;
+    object-fit: cover;
+    opacity: .8;
+}
